# onepercentdev

./: .gitignore  404.html  MIGRATION_DOCS.md  README.md  courses.config.json  fix_notes.py  index.html  index.txt  notes_viewer.html  vercel.json
Part-10/: notes.md
Part-11/: example.py
Part-12/: example.py  notes.md
Part-14/: example.py
Part-15/: notes.md
Part-16/: notes.md
Part-17/: example.py
Part-18/: notes.md
Part-19/: notes.md
Part-20/: example.py
Part-22/: notes.md
Part-24/: notes.md
Part-25/: example.py  notes.md
Part-29/: main.py  notes.md  utils.py
Part-32/: notes.md
Part-32/install_published_project/: README.md
Part-32/publish_project/: README.md  pyproject.toml
Part-32/publish_project/src/onepercentutils/: __init__.py
Part-4/: notes.md
Part-5/: notes.md
Part-6/: example.py  notes.md
Part-7/: notes.md
Part-8/: example.py  notes.md
api/: modules.json
api/notes/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  (+17 more)
backend/: .gitignore  academy.db  check-tables.js  index.js  package-lock.json  package.json  reminder-schema.sql  run-schema.js  setup-supabase.js  smart-tasks-schema.sql  supabase-schema.sql
content/python/Part-31/poetry_project/: chat.py  main.py  my_module.py  pyproject.toml
content/python/Part-31/poetry_project/my_package/: text_utils.py
frontend/: .gitignore  clean-css-2.js  clean-css.js  clean_play.js  next.config.js  next.config.ts  package-lock.json  package.json  refactor_playground.js
(+259 files in other folders)
