[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onepercentutils-shyam"
version = "0.0.1"
authors = [
  { name = "Shyam", email = "" },
]
description = "Text utility functions from the OnePercent Python series"
readme = "README.md"
requires-python = ">=3.10"
